--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
